--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Hello World</title>
+  <title>Black Jack</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Custom CSS & JS -->
@@ -14,7 +14,22 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <h2>Dealer: <span id="dealer-sum"></span></h2>
+  <div id="dealer-cards">
+    <img src="./cards/BACK.png">
+    <img src="./cards/10-C.png">
+  </div>
+
+
+  <h2>You: <span id="your-sum"></span></h2>
+  <div id="your-cards"></div>
+
+  <br>
+  <button id="hit">Hit</button>
+  <button id="stay">Stay</button>
+  <p id="results"></p>
+
+
 
 
 
