--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>Black Jack</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Custom CSS & JS -->
-  <link rel="stylesheet" href="style.css">
-  <script defer src="script.js" type="text/javascript"></script>
-  <!-- Bootstrap CSS & JS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Black Jack</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" ref="stylesheet">
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
 
 <body>
-  <h2>Dealer: <span id="dealer-sum"></span></h2>
-  <div id="dealer-cards">
-    <img src="./cards/BACK.png">
-    <img src="./cards/10-C.png">
-  </div>
-
-
-  <h2>You: <span id="your-sum"></span></h2>
-  <div id="your-cards"></div>
-
-  <br>
-  <button id="hit">Hit</button>
-  <button id="stay">Stay</button>
-  <p id="results"></p>
+    <h2>Dealer: <span id="dealer-sum"></span></h2>
+    <div id="dealer-cards">
+        <img id="hidden" src="./cards/BACK.png">
+    </div>
+    
+    <h2>You: <span id="your-sum"></span></h2>
+    <div id="your-cards"></div>
+    
+    <br>
+    <button id="hit">Hit</button>
+    <button id="stay">Stay</button>
+    <p id="results"></p>
 
 
 
